package com.bcnc.inditex_pricing_service.domain.port.input;

public class PriceUsecase {
}
