package com.bcnc.inditex_pricing_service.infrastructure.exception;

public class GlobalExceptionHandler {
}
