package com.bcnc.inditex_pricing_service.infrastructure.persistence.entity;

public class PriceEntity {
}
