package com.bcnc.inditex_pricing_service.shared.dto;

public class PriceResponseDto {
}
