package com.bcnc.inditex_pricing_service.shared.mapper;

public class PriceResponseMapper {
}
